# OS_labs

Libraries/Libraries/: Libraries.cpp  Libraries.vcxproj.filters
Libraries/Libraries/x64/Release/: Libraries.exe.recipe  Libraries.iobj  Libraries.ipdb
Libraries/Libraries/x64/Release/Libraries.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Libraries.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  (+1 more)
Libraries/Number/: Number.vcxproj  pch.h
lab2-Канал/: simpletest.cpp
Оси/lab1-Библиотека/Libraries Linux/: Libraries.cpp  Makefile  Number.cpp  Number.h  Vector.cpp  Vector.h
Оси/lab1-Библиотека/Libraries Windows/: Libraries.sln  Libraries.vcxproj  Number.cpp  Number.h  Vector.cpp  Vector.h
Оси/lab2-Канал/: buffered_channel.h  fulltest.cpp
Оси/lab3-Матрица/: SpeedAnalys.xlsx  outputThread.txt
Оси/lab3-Матрица/Windows.h/: Windows.h.sln
Оси/lab3-Матрица/Windows.h/Windows.h/: Windows.h.cpp  Windows.h.vcxproj  Windows.h.vcxproj.filters
Оси/lab3-Матрица/basic algorithm/: basic algorithm.sln
Оси/lab3-Матрица/basic algorithm/thread/: thread.cpp  thread.vcxproj
Оси/lab3-Матрица/pthread/: main  pthread.cpp  pthread.h  run_tests.sh
Оси/lab3-Матрица/thread/: CMakeLists.txt
Оси/lab3-Матрица/thread/thread/: CMakeLists.txt  thread.cpp  thread.h
Оси/lab4-Пайпы/Pipes linux/: A  A.cpp  M  P  P.cpp  S  main  main.cpp
Оси/lab4-Пайпы/Pipes win/: M.cpp  S.cpp  main.cpp
Оси/lab5-Процессы/Processes linux/: create.sh  killer  killer.cpp  user  user.cpp
Оси/lab5-Процессы/Processes win/: killer.cpp  user.cpp
(+33 files in other folders)
